--- a/bio.html
+++ b/bio.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html">Home</a>
   <a href="songs.html">Songs</a>
-  <a href="help.html">Contact</a>
+  <a href="shop.html">Shop</a> 
+  <a href="events.html">Events</a>
+  <a href="help.html">Contact</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
@@ -15,7 +17,7 @@
       <a href="#">LOL I FELL LIKE WELL NEED THIS</a>
     </div>
   </div> 
-  <a href="bio.html">About</a>
+  <a href="bio.html"class="active">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <style>
@@ -31,9 +33,9 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 20px 70px;
+    padding: 20px 60px;
     text-decoration: none;
-    font-size: 23px;
+    font-size: 22px;
 }
 /* Add an active class to highlight the current page */
 .active {
@@ -51,11 +53,11 @@
 }
 /* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-    font-size: 23px; 
+    font-size: 22px; 
     border: none;
     outline: none;
     color: white;
-    padding: 20px 70px;
+    padding: 20px 60px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -69,7 +71,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
     z-index: 1;
 }
-/* Style the links inside the dropdown */
+  /* Style the links inside the dropdown */
 .dropdown-content a {
     float: none;
     color: black;
