--- a/bio.html
+++ b/bio.html
@@ -126,6 +126,16 @@
 }
   
 <body>
+  <h1 style="font-family: Arial, Helvetica> About The Artist  </h1>
+  <p> The Artists information </p>
+  
+  
+  
+  
+  
+  
+  
+  
   
 </body>
  </html>
