--- a/bio.html
+++ b/bio.html
@@ -126,7 +126,7 @@
 }
   
 <body>
-  <h1 style="font-family": Arial> About The Artist  </h1>
+  <h1> About The Artist  </h1>
   <p> The Artists information </p>
   
   
