--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="file:///E:/worklog.pdf">Work Log</a>
+      <a href="ScitechWebmaster.github.io/worklog.pdf">Work Log</a>
       <a href="#">Copy Right Checklist</a>
       <a href="#">LEAP Form</a>
     </div>
