--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
       <a href="#">LEAP Form</a>
     </div>
   </div> 
-  
+  <link rel="stylesheet" href="bio.css">
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <style>
