--- a/bio.html
+++ b/bio.html
@@ -128,12 +128,42 @@
 }
   
 <body>
-  <h1> About The Artist  </h1>
-  <p> The Artists information </p>
+
+ /*This creates a flexible box used to design the layout*/
+  
+ /*Contains the profile pictures*/
+  
+ <div class="flex-container1">
+  <div class="ka">
+    <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!">
+  </div>
+  
+  <div class="ca">
+    <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!">
+  </div>
+  
+  <div class="ha">
+   <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!">
+  </div>
+</div> 
   
   
+  /*For Intro Statements*/
+<div class="flex-container2">
   
+  <div class="1">
+  K
+  </div>
   
+  <div class"2">
+  C
+  </div>
+  
+  <div class="3">
+  H
+  </div>
+</div> 
+   
   
   
   
