--- a/bio.html
+++ b/bio.html
@@ -165,7 +165,20 @@
 </div> 
    
   
+@media (max-width: 600px) {
+  article {
+    width: 100%;
+    height: auto;
+  }
+}
   
+  
+    <article>
+    <h1>Bohemian Rhapsody</h1>
+    
+    <p>"Bohemian Rhapsody" is a song by the British rock band Queen. It was written by Freddie Mercury for the band's 1975 album A Night at the Opera.</p>
+    <p>Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. </p>
+  </article>
   
   
   
