--- a/bio.html
+++ b/bio.html
@@ -131,7 +131,7 @@
 }
   
   
-  @media (max-width: 600px) {
+  @media screen and (max-width: 600px) {
   article {
     width: 100%;
     height: auto;
