--- a/bio.html
+++ b/bio.html
@@ -1,8 +1,8 @@
 <DOCTYPE! html>
 <html>
 <head>
-  
-  @media screen and (max-width: 600px) {
+  /* Layout */
+  @media (max-width: 600px) {
   article {
     width: 100%;
     height: auto;
