--- a/bio.html
+++ b/bio.html
@@ -1,14 +1,8 @@
 <DOCTYPE! html>
 <html>
 <head>
-  
-  <article>
-    <h1>Bohemian Rhapsody</h1>
-    <p>"Bohemian Rhapsody" is a song by the British rock band Queen. It was written by Freddie Mercury for the band's 1975 album A Night at the Opera.</p>
-    <p>Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. </p>
-  </article>
     
-  
+  <header>
 <div class="topnav" id="myTopnav">
   <a href="index.html">Home</a>
   <a href="bio.html"class="active">About</a>
@@ -134,10 +128,14 @@
     text-align: left;
   }
 }
-
-  
+<header>
+</head>
 <body>
-
+<section>
+    <h1>Bohemian Rhapsody</h1>
+    <p>"Bohemian Rhapsody" is a song by the British rock band Queen. It was written by Freddie Mercury for the band's 1975 album A Night at the Opera.</p>
+    <p>Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. </p>
+    </section>
   
  /*This creates a flexible box used to design the layout*/
   
@@ -177,5 +175,4 @@
   
   
 </body>
-</head>
  </html>
