--- a/bio.html
+++ b/bio.html
@@ -1,12 +1,7 @@
 <DOCTYPE! html>
 <html>
 <head>
-    
-    <section>
-    <h1>Bohemian Rhapsody</h1>
-    <p>"Bohemian Rhapsody" is a song by the British rock band Queen. It was written by Freddie Mercury for the band's 1975 album A Night at the Opera.</p>
-    <p>Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. </p>
-    </section>
+   
     
   <header>
 <div class="topnav" id="myTopnav">
@@ -16,6 +11,7 @@
   <a href="shop.html">Shop</a> 
   <a href="events.html">Events</a>
   <a href="help.html">Help</a> 
+  <a href="team.html">Team</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
