--- a/bio.html
+++ b/bio.html
@@ -156,37 +156,25 @@
 	<h1>Meet Hazel</h1>
 		<br />
 		<br />
-      Former America's Got Talent© Winner
+	 <h3> Former America's Got Talent© Winner</h3>
       <br />
-      Three BILLBOARD©  number ones
+	 <h3> Three BILLBOARD©  number ones</h3>
       <br />
-      Nominated for five Grammys© 
+	 <h3> Nominated for five Grammys© </h3>
       <br />
-			A 15 year old with a passion for singing that began when she was little.
+	<h3>		A 15 year old with a passion for singing that began when she was little. <h3>
    
 		</p>
 	</section>
   
   
-	<section id="section-c">
-	<div class="box-1">
-
-	</div>
-	<div class="box-2">
-
-	</div>
-		<div class="box-3">
-	
-	</div>
-		
-	</section>
 	
 	<section id="section-d">
 
 		<div class="box-4">
-			<p> Hannah Garcia
+			<p>
 		<br />
-		Positions: Team Leader, Presenter, Researcher, HTML & CSS Programmer, Media Specialist, HTML team specialist.
+		
 		</p>
 		
 
@@ -194,17 +182,17 @@
 
 		<div class="box-5">
 
-			<p> Caleb Gomez
+			<p> 
 		<br />
-		Positions: Assistant-Leader, Presenter, Researcher, HTML & CSS Programmer, and HTML team specialist.
+		
 		</p>
 
 		</div>
 
 		<div class="box-6">
-			<p> Kashish Kumar
+			<p> 
 		<br />
-		Positions: Member, Presenter, HTML & CSS Programmer, and CSS specialist.
+	
 		</p>
 
 		</div>
