--- a/bio.html
+++ b/bio.html
@@ -162,7 +162,7 @@
       <br />
 	 <h3> Nominated for five Grammys© </h3>
       <br />
-	<h3>		A 15 year old with a passion for singing that began when she was little. <h3>
+	<h3>		A 17 year old with a passion for singing that began when she was little. <h3>
    
 		</p>
 	</section>
@@ -172,7 +172,7 @@
 	<section id="section-d">
 
 		<div class="box-4">
-			<p>
+			<p> 
 		<br />
 		
 		</p>
@@ -182,7 +182,22 @@
 
 		<div class="box-5">
 
-			<p> 
+			<p> Hazel sang as a child in her elementary's choir.
+				<br />
+			At the age of ten, Hazel had already learned to play the piano and the guitar.
+				<br />
+			By twelve, Hazel had released her first youtube clip of her singing and it reached 10,000 likes.
+				<br />
+			At fourteen, Hazel auditioned and won America's Got Talent and was seen as, "the next big star".
+				<br />
+			By 15, Hazel released her first album which charted on BILLBOARD as number one for seven weeks.
+				<br />
+			At 16, Hazel had been nominated and won five Grammys.
+				<br />
+			<h2 align="center"> TODAY</h2>
+			Hazel is preparing to embark on her second world tour after the successful Tokyo Tour.
+			<br />
+			Her line FIERCExHazel has became a best seller and her MINIMALISM© line is world renown.
 		<br />
 		
 		</p>
