--- a/bio.html
+++ b/bio.html
@@ -201,16 +201,16 @@
 				<br />
 				<br />
 			</p>
-			<h2 align="center"> TODAY</h2>
+			<h2>TODAY</H2>
 			<br />
-			<p>
+			<h3>
 			Hazel is preparing to embark on her second world tour after the successful Tokyo Tour.
 			<br />
 				<br />
 			Her line FIERCExHazel has became a best seller and her MINIMALISM© line is world renown.
 		<br />
 		
-		</p>
+		</h3
 
 		</div>
 
@@ -224,9 +224,22 @@
 
 	</section>
    
+ <footer>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="bio.html">About</a></li>
+		<li><a href="songs.html">Songs</a></li>
+		<li><a href="shop.html">Shop</a> </li>
+		<li><a href="events.html">Events</a></li>
+		<li><a href="help.html">Help</a> </li>
+	 	<li><a href="team.html">Team</a></li>
+		<li><a href="ScitechWebmaster.github.io/worklog.pdf">Work Log</a></li>
+		<li> <a href="ScitechWebmaster.github.io/CopyRight&tPhotoRelease.pdf">Copy Right Checklist</a></li>
+		<li> <a href="ScitechWebmaster.github.io/LEAP.pdf">LEAP Form</a></li>
+</footer>
    
-   
-   
+    
+
+
   
 </body>
  </html>
