--- a/bio.html
+++ b/bio.html
@@ -207,7 +207,7 @@
 			Hazel is preparing to embark on her second world tour after the successful Tokyo Tour.
 			<br />
 				<br />
-			Her line FIERCExHazel has became a best seller and her MINIMALISM© line is world renown.
+			Her line FIERCExHazel has became a best seller and her MINIMALISM line is world renown.
 		<br />
 		
 		</h3
