--- a/bio.html
+++ b/bio.html
@@ -173,7 +173,9 @@
 	<section id="section-d">
 
 		<div class="box-4">
-			<p> 
+			<p> <h1>Meet Hazel</h1>
+			
+			<img src="hazel.jpg" class="image" style="align:center;">
 		<br />
 		
 		</p>
