--- a/bio.html
+++ b/bio.html
@@ -157,7 +157,7 @@
 	<h1>Meet Hazel</h1>
 		<br />
 		<br />
-	 <img src="hazel.jpg" class="image" style="align:center;">
+	 <img src="ScitechWebmaster.github.io/hazel1.jpg" class="image" style="align:center;">
 	 <br />
 	 <br />
 	 <br />
